--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   background: url('/background.png') no-repeat center center fixed;
   background-size: cover;
   opacity: 0.2;
-  animation: subtle-pan-zoom 40s ease-in-out infinite;
+  animation: subtle-pan-zoom 30s ease-in-out infinite;
   will-change: transform;
 }
 
@@ -278,4 +278,50 @@
   position: absolute;
   width: 0;
   height: 0;
+}
+
+.slide-rotate-hor-top {
+  opacity: 0;
+}
+
+.slide-rotate-hor-top.visible {
+  opacity: 1;
+  -webkit-animation: slide-rotate-hor-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-rotate-hor-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@keyframes slide-rotate-hor-top {
+  0% {
+    /* -webkit-transform: translateY(-150px) rotateX(-90deg); */
+    transform: perspective(400px) rotateX(-90deg);
+    transform-origin: top;
+  }
+
+  100% {
+    /* -webkit-transform: translateY(0) rotateX(0deg); */
+    transform: perspective(400px) rotateX(0deg);
+    transform-origin: top;
+  }
+}
+
+.flip-2-hor-top-1 {
+  opacity: 0;
+}
+
+.flip-2-hor-top-1.visible {
+  opacity: 1;
+  -webkit-animation: flip-2-hor-top-1 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+  animation: flip-2-hor-top-1 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+
+@keyframes flip-2-hor-top-1 {
+  100% {
+    transform: translateY(0) rotateX(0);
+    transform-origin: 50% 0%;
+  }
+
+  0% {
+    transform: translateY(-100%) rotateX(-180deg);
+    transform-origin: 50% 100%;
+  }
 }
