[dyad] Fixing typing animation bug - wrote 3 file(s)

--- a/src/App.css
+++ b/src/App.css
@@ -91,9 +91,15 @@
   }
 }
 
-.typing-cursor {
+.typing-cursor-host::after {
+  content: '';
+  display: inline-block;
+  width: 0;
+  height: 1em;
+  vertical-align: text-bottom;
   border-right: 0.1em solid hsl(var(--primary));
   animation: blink-caret 0.75s step-end infinite;
+  margin-left: 2px;
 }
 
 @keyframes blink-caret {
