--- a/src/App.css
+++ b/src/App.css
@@ -199,7 +199,7 @@
       hsl(var(--card)));
 
   --f: url(#golden-shock);
-  --electric-border-color: #dd8448;
+  --electric-border-color: hsl(var(--primary));
   --electric-light-color: oklch(from var(--electric-border-color) l c h);
   --gradient-color: oklch(from var(--electric-border-color) 0.3 calc(c / 2) h / 0.4);
   pointer-events: none;
