--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -332,3 +332,41 @@
 .view-switcher__input--3d:checked~.view-switcher__toggle {
   left: calc(50% + 2px);
 }
+
+/* Cloud Preloader */
+.preloader-wrapper {
+  position: relative;
+  width: 160px;
+  height: 160px;
+  perspective: 500px;
+  transform-style: preserve-3d;
+}
+
+.cloud-particle {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 8px;
+  height: 8px;
+  margin-top: -4px;
+  margin-left: -4px;
+  border-radius: 9999px;
+  opacity: 0;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 1);
+  animation-name: spin-cloud;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes spin-cloud {
+  from {
+    opacity: 0.0;
+  }
+  to {
+    opacity: 0.6;
+    transform: translate3d(-4px, -4px, 570px);
+  }
+}
